2010-01-20	Joel Sherrill <joel.sherrill@oarcorp.com>

	* libmisc/shell/hexdump-parse.c: Fix uninitialized warning.

2010-01-20	Joel Sherrill <joel.sherrill@oarcorp.com>

	Coverity Id 30
	* libmisc/shell/hexdump-parse.c: Add free(pr) before returning.

2010-01-20	Chris Johns <chrisj@rtems.org>

	Coverity Id 6
	* libmisc/shell/hexdump-parse.c: Modify conditional to avoid NULL
	dereference.

2010-01-20	Chris Johns <chrisj@rtems.org>

	Coverity Id 9
	* libmisc/shell/main_ls.c: Modify conditional to avoid NULL
	dereference.

2010-01-19	Joel Sherrill <joel.sherrill@oarcorp.com>

	Coverity Id 10
	* libblock/src/bdbuf.c: Rework loop conditional to avoid potential use
	of NULL pointer.

2010-01-19	Joel Sherrill <joel.sherrill@oarcorp.com>

	Coverity Id 23
	* libmisc/monitor/mon-monitor.c: Add fclose() of file.

2010-01-19	Joel Sherrill <joel.sherrill@oarcorp.com>

	* libblock/src/ide_part_table.c: Another error path without a
	free(sector).

2010-01-19	Joel Sherrill <joel.sherrill@oarcorp.com>

	Coverity Id 28
	* libcsupport/src/termios.c: Set then unconditionally to avoid
	potential paths where it might be used uninitialized. Recommended by
	Eric Norum.

2010-01-19	Joel Sherrill <joel.sherrill@oarcorp.com>

	Coverity Id 18
	* libmisc/shell/fts.c: Add free(parent) to correct leak.

2010-01-19	Joel Sherrill <joel.sherrill@oarcorp.com>

	Coverity Id 24
	* libblock/src/ide_part_table.c: Initialize sector to NULL and add
	free(sector) on error return path from get_sector() to fix potential
	leak.

2010-01-19	Joel Sherrill <joel.sherrill@oarcorp.com>

	Coverity Id 25
	* libblock/src/ide_part_table.c: Add free(sector) on error return path
	to fix leak.

2010-01-19	Joel Sherrill <joel.sherrill@oarcorp.com>

	Coverity Id 5
	* score/src/objectinitializeinformation.c: Do not modify maximum
	parameter. Clean up and simplify code. This should help the Coverity
	path analysis to avoid reporting issues.

2010-01-19	Joel Sherrill <joel.sherrill@oarcorp.com>
